<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:gravity="center_vertical">

    <TextView
        style="@style/TextAppearance.AppCompat.Headline"
        android:id="@+id/postTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceListItemSmall"
        android:text="@string/PollTitleString" />

    <RadioGroup
        style="@style/TextAppearance.AppCompat.Body1"
        android:id="@+id/pollPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceListItemSmall" />

    <Button
        android:id="@+id/pollSubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SubmitString"
        style="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"/>

    <ImageView
        android:id="@+id/likeButton"
        android:padding="7dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/unpressed_like_button"
        android:contentDescription="@string/likeButton" />

</LinearLayout>